--- a/src/blocks/elements/__delete/elements__delete.css
+++ b/src/blocks/elements/__delete/elements__delete.css
@@ -2,7 +2,7 @@
   position: absolute;
   padding: 0;
   margin: 0;
-  display: flex;
+  /* display: flex; */
   right: 16px;
   top: 18px;
   background: none;
